WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
298872
[WebXR] Cannot set the baseLayer to null when updating the render state
https://bugs.webkit.org/show_bug.cgi?id=298872
Summary
[WebXR] Cannot set the baseLayer to null when updating the render state
Sergio Villar Senin
Reported
2025-09-15 08:47:59 PDT
That's why w3c/web-platform-tests/exclusive_requestFrame_nolayer.https.html is failing
Attachments
Add attachment
proposed patch, testcase, etc.
Sergio Villar Senin
Comment 1
2025-09-15 08:53:50 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/50750
Radar WebKit Bug Importer
Comment 2
2025-09-22 08:48:47 PDT
<
rdar://problem/161098741
>
EWS
Comment 3
2025-09-23 03:07:19 PDT
Committed
300378@main
(9c9d8e85dc98): <
https://commits.webkit.org/300378@main
> Reviewed commits have been landed. Closing PR #50750 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug