[WebXR] Cannot set the baseLayer to null when updating the render state https://bugs.webkit.org/show_bug.cgi?id=298872

Reviewed by Carlos Garcia Campos and Dan Glastonbury.

The baseLayer of the render state must be an optional so that the code
could differentiate from a null baseLayer and a non set baseLayer. WebXR
sessions can clear the baseLayer to ensure that rAF won't fire.

The exclusive_requestFrame_nolayer.https.html tests now passes.

* LayoutTests/imported/w3c/web-platform-tests/webxr/exclusive_requestFrame_nolayer.https-expected.txt:
* LayoutTests/platform/glib/TestExpectations:
* Source/WebCore/Modules/webxr/WebXRSession.cpp:
(WebCore::WebXRSession::updateRenderState):
* Source/WebCore/Modules/webxr/XRRenderStateInit.h:

Canonical link: https://commits.webkit.org/300378@main