Source/WebCore/Modules/webxr/XRRenderStateInit.h
@@ -38,7 +38,7 @@ struct XRRenderStateInit {
     std::optional<double> depthFar;
     std::optional<bool> passthroughFullyObscured;
     std::optional<double> inlineVerticalFieldOfView;
-    RefPtr<WebXRWebGLLayer> baseLayer;
+    std::optional<RefPtr<WebXRWebGLLayer>> baseLayer;
     std::optional<Vector<Ref<WebXRLayer>>> layers;
 };
 
